<resources>
    <string name="app_name">ASSIGNMENT2</string>


    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_date">Task Date</string>
    <string name="task_priority">Task Priority</string>
    <string name="save">Save</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_summary">Enable dark theme for the app</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_summary">Enable task reminders</string>
    <string name="task_sorting">Task Sorting</string>
    <string name="task_sorting_summary">Select how tasks are sorted</string>
    <string name="no_tasks_available">No tasks available.</string>
    <string name="no_tasks">no</string>

    <string name="no_tasks_message">No tasks available. Click the + button to add one.</string>
    <string name="delete_task">delete_task8</string>
    <string name="update_task">update_task99</string>
    <string name="fetching_quote44">Fetching quote...</string>

    <string name="back45">Back</string>
    <string name="task_description_here425">Task Description Here</string>
    <string name="save_task">save_task</string>
    <string name="fetching_quote">Fetching quote...</string>



</resources>
