<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:key="dark_mode"
        android:title="@string/dark_mode"
        android:summary="@string/dark_mode_summary"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="notifications"
        android:title="@string/notifications"
        android:summary="@string/notifications_summary"
        android:defaultValue="true" />

    <ListPreference
        android:key="task_sorting"
        android:title="@string/task_sorting"
        android:summary="@string/task_sorting_summary"
        android:entries="@array/sorting_options"
        android:entryValues="@array/sorting_values"
        android:defaultValue="date" />
</PreferenceScreen>
